Ensures correct margin used on expand/collapse button when in RTL text mode (#499)
* Documentation updates
NavMenu - Add rtl css, add IDisposable to components

* Move expand/collapse button to the end

* Fix margin on expand/collapse button when switching between RTL and LTR

---------

--- a/src/Microsoft.Fast.Components.FluentUI/Components/NavMenu/FluentNavMenu.razor.css
+++ b/src/Microsoft.Fast.Components.FluentUI/Components/NavMenu/FluentNavMenu.razor.css
@@ -67,10 +67,11 @@
 ::deep .navmenu-group::part(expand-collapse-button) {
     left: unset;
     right: 0;
-    margin-right: calc(var(--expand-collapse-button-size) * -1);
+    margin-inline-end: calc(var(--expand-collapse-button-size) * -1 + (var(--design-unit) * 2px));
 }
 
 [dir="rtl"] * ::deep .navmenu-group.nested::part(expand-collapse-button) {
     left: 0;
     right: unset;
+    margin-inline-start: calc(var(--expand-collapse-button-size) - (var(--design-unit) * 2px));
 }
